--- a/src/Assets/scss/_config.scss
+++ b/src/Assets/scss/_config.scss
@@ -49,6 +49,12 @@ $xxxl:1680px;
                     @content;
             }
     }
+//xs
+@mixin xs-width() {
+    @media all and (min-width: $xs) and (max-width: $sm) {
+                    @content;
+            }
+    }
 /*Mixins*/
 @mixin translateY($e) {
     -webkit-transform: translateY($e);
@@ -92,10 +98,16 @@ h1{
     }
     @include lg-width{
         font-size:4rem;
-      }
-      @include md-width{
+    }
+    @include md-width{
+        font-size:3.5rem;
+    }
+    @include sm-width{
         font-size:3rem;
-              }
+    }
+    @include xs-width{
+        font-size:3rem;
+    }
 }
 h2{
     
@@ -114,9 +126,15 @@ h2{
     @include lg-width{
         font-size:3rem;
       }
-      @include md-width{
+    @include md-width{
         font-size:3rem;
-              }
+    }
+    @include sm-width{
+        font-size:2.5rem;
+    }
+    @include xs-width{
+        font-size:2.5rem;
+    }
 }
 h3{
     
@@ -134,10 +152,16 @@ h3{
     }
     @include lg-width{
         font-size:2rem;
-      }
-      @include md-width{
+    }
+    @include md-width{
         font-size:1.75rem;
-              }
+    }
+    @include sm-width{
+        font-size:1.75rem;
+    }
+    @include xs-width{
+        font-size:1.5rem;
+    }
 }
 h4{
    
@@ -156,9 +180,15 @@ h4{
     @include lg-width{
         font-size:1.55rem;
       }
-      @include md-width{
+    @include md-width{
         font-size:1.55rem;
-              }
+    }
+    @include sm-width{
+        font-size:1.55rem;
+    } 
+    @include xs-width{
+        font-size:1.25rem;
+    } 
 }
 p{
     
@@ -176,8 +206,14 @@ p{
     }
     @include lg-width{
         font-size:1rem;
-      }
-      @include md-width{
+    }
+    @include md-width{
         font-size:1rem;
-              }
+    }
+    @include sm-width{
+        font-size:1rem;
+    }
+    @include xs-width{
+        font-size:1rem;
+    } 
 }
