--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -25,6 +25,12 @@
      @include md-width{
       padding:15px 40px;
             }
+    @include sm-width{
+      padding:15px 20px; 
+    }
+    @include xs-width{
+      padding:15px 20px; 
+  } 
     @include transition(.2s ease);
     &:hover{
        color:$white;
@@ -33,7 +39,16 @@
        background: $white;
        @include md-width{
         background: rgba(0, 0, 0, 0);
+        color:$white;
               }
+              @include sm-width{
+                background: rgba(0, 0, 0, 0);
+                color:$white;
+              }
+              @include xs-width{
+                background: rgba(0, 0, 0, 0);
+                color:$white;
+            } 
       //  border:2px solid $black;
     }
 }
@@ -62,7 +77,15 @@
   @include md-width{
     padding:15px 40px;
     border:2px solid $white;
-          }
+  }
+  @include sm-width{
+    padding:15px 20px;
+    border:2px solid $white;
+  }
+  @include xs-width{
+    padding:15px 20px; 
+    border:2px solid $white;
+} 
   @include transition(.2s ease);
     &:hover{
       color:$black;
@@ -73,6 +96,14 @@
         background: rgba(255, 255, 255, 0);
         border:2px solid $white;
               }
+              @include sm-width{
+                background: rgba(255, 255, 255, 0);
+                border:2px solid $white;
+                      }   
+                      @include xs-width{
+                        background: rgba(255, 255, 255, 0);
+                        border:2px solid $white;
+                    } 
     }
 }
 
