--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -653,10 +653,11 @@ a {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   padding: 0px 5%;
   box-sizing: border-box; }
   .professional h1 {
+    font-family: 'Playfair Display', serif;
     font-size: 60px;
     letter-spacing: 5px; }
     @media all and (min-width: 768px) and (max-width: 992px) {
@@ -816,11 +817,12 @@ a {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   padding: 0px 5%; }
   .academic h1 {
     font-size: 60px;
-    letter-spacing: 5px; }
+    letter-spacing: 5px;
+    font-family: 'Playfair Display', serif; }
     @media all and (min-width: 768px) and (max-width: 992px) {
       .academic h1 {
         font-size: 36px;
