--- a/src/Assets/scss/landingPage.scss
+++ b/src/Assets/scss/landingPage.scss
@@ -256,10 +256,11 @@
     flex-direction: column;
     align-items: center;
     width:100%;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     padding:0px 5%;
     box-sizing: border-box;
     h1{
+        font-family: 'Playfair Display', serif;
         font-size: 60px;
         letter-spacing: 5px;
         @include md-width{
@@ -453,11 +454,13 @@
     flex-direction: column;
     align-items: center;
     width:100%;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
+    
     padding:0px 5%; 
     h1{
         font-size: 60px;
         letter-spacing: 5px;
+        font-family: 'Playfair Display', serif;
         @include md-width{
             font-size: 36px;
             margin:45px 0px;
